crates/swc_ecma_parser/tests/test262-error-references/fail/2079bad53fe76b1d.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/2079bad53fe76b1d.js:1:8
  |
1 | with(x)
  |        ^

